<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FeedHenry</string>
    <string name="action_settings">Settings</string>

    <!-- Nav Drawer Menu Items -->
    <!-- With fontawesome Unicodes for icons -->
    <!-- The &#160; is a unicode white space character -->
    <string-array name="nav_drawer_items">
        <item>&#xf015;&#160;&#160;&#160;Home</item>
        <item>&#xf0c2;&#160;&#160;&#160;Call Cloud</item>
        <item>&#xf0a6;&#160;&#160;&#160;Push Notifications</item>
        <item>&#xf185;&#160;&#160;&#160;Location Example</item>
        <item>&#xf0ce;&#160;&#160;&#160;Data Browser</item>
        <item>&#xf05a;&#160;&#160;&#160;Native App Info</item>
        <item>&#xf085;&#160;&#160;&#160;Cloud Integrations</item>
        <item>&#xf080;&#160;&#160;&#160;Statistics</item>
    </string-array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="home">Home</string>
    <string name="call_cloud">Call Cloud</string>
    <string name="location">Location</string>
    <string name="data_browser">Data Browser</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="home_title">Welcome to\nFeedHenry</string>
    <string name="home_subtitle">Learn about and interact with\nour platform</string>
    <string name="land_home_title">Welcome to FeedHenry</string>
    <string name="land_home_subtitle">Learn about and interact with our platform</string>
    <string name="cloud_action_title">Cloud\nAction</string>
    <string name="cloud_action_subtitle">Try it now</string>
    <string name="example_title">Example</string>
    <string name="example_subtitle">Location/Weather\nexample</string>
    <string name="data_browser_title">Data Browser</string>
    <string name="data_browser_subtitle">Use Mongo DB</string>
    <string name="push_notification_title">Push\nNotifications</string>
    <string name="push_notification_subtitle">Try it now</string>
    <string name="cloud_logo">&#xf0c2;</string>
    <string name="data_browser_logo">&#xf0ce;</string>
    <string name="example_logo">&#xf185;</string>
    <string name="push_logo">&#xf0a6;</string>
    
    <string name="cloud_action">Cloud Action</string>
    <string name="cloud_action_body_text">This client app is now connected to its matching Node.js cloud code on FeedHenry. Tap the button to request a response from the cloud.</string>
    <string name="cloud_action_btn">&#xf14c; Call Cloud</string>
    <string name="cloud_action_response_title">Response: Hello from feedhenry</string>
    <string name="cloud_action_response_subtitle">Now check your stats page in the studio to check that this cloud call happened.</string>
    
    <string name="data_browser_body_text">Enter your name and tap the button to save your name in our cloud database.</string>
    <string name="data_browser_btn">&#xf0c7; Save</string>
    <string name="data_browser_success">Success: Name stored in Mongo DB</string>
    <string name="data_browser_fail">Fail: Name not stored</string>
    
    <string name="location_title">Location Example</string>
    <string name="location_body_text">Let\'s grab your location and do something with it. Tap the button to find your location.</string>
    <string name="location_btn">&#xf124; Get My Location</string>
    <string name="location_success">Now we are going to use that location to request weather information from an online web-service via our cloud code. Tap the button to do this.</string>
    
    <string name="weather_btn">&#xf0ac; Get My Weather Info</string>
    
    <string name="cloud_integrations_title">Cloud Integrations</string>
    <string name="cloud_integrations_body_text">You can easily integrate with all of your existing back-end systems using Cloud Plugins. Check out the App Studio to see how to connect to Databases, Messaging, Analytics, SaaS, eCommerce, Logging, Data Storage, Testing Tools and File Storage. A few examples including\:</string>

    <string name="stats_title">Stats</string>
    <string name="stats_body_text">In addition to all of our app install/usage analytics, you can also instrument your cloud code to see exactly how it\'s performing. Go to the stats section of the Studio and see if your device has been detected</string>
    
    <string name="app_info_device_title">About this Device</string>
    <string name="app_info_manufacturer">Manufacturer:</string>
    <string name="app_info_model">Model:</string>
    <string name="app_info_product">Product:</string>
    <string name="app_info_serial">Serial:</string>
    <string name="app_info_cpu">CPU Type:</string>
    <string name="app_info_host">Host:</string>
    <string name="app_info_cloud_title">The Cloud Host</string>
    <string name="app_info_app_name">App Name:</string>
    <string name="app_info_app_domain">Host Domain:</string>
    <string name="app_info_app_env">Host Environment:</string>
    <string name="app_info_app_port">Host Port:</string>
    
</resources>