<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            style="@style/header_1"
            android:text="@string/app_info_device_title" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/table_bg"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/app_info_left_col"
                    android:text="@string/app_info_manufacturer" />

                <TextView
                    android:id="@+id/textView1"
                    android:text="@style/app_info_right_col" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/app_info_left_col"
                    android:text="@string/app_info_model" />

                <TextView
                    android:id="@+id/textView2"
                    android:text="@style/app_info_right_col" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/app_info_left_col"
                    android:text="@string/app_info_product" />

                <TextView
                    android:id="@+id/textView3"
                    android:text="@style/app_info_right_col" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/app_info_left_col"
                    android:text="@string/app_info_serial" />

                <TextView
                    android:id="@+id/textView4"
                    android:text="@style/app_info_right_col" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/app_info_left_col"
                    android:text="@string/app_info_cpu" />

                <TextView
                    android:id="@+id/textView5"
                    android:text="@style/app_info_right_col" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/app_info_left_col"
                    android:text="@string/app_info_host" />

                <TextView
                    android:id="@+id/textView6"
                    android:text="@style/app_info_right_col" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</ScrollView>