<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/home_title_background"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/home_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:gravity="center"
                android:text="@string/home_title"
                android:textColor="@color/list_item_title"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/home_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/home_subtitle"
                android:textColor="@color/list_item_title"
                android:textSize="15sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="right"
            android:src="@drawable/ic_launcher" />
        
    </FrameLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp" >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <Button
                    android:id="@+id/cloud_btn"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:background="@drawable/round_button"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/cloud_logo"
                    android:textSize="26sp"
                    android:textColor="@color/list_item_title" />
            </RelativeLayout>
            
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <Button
                    android:id="@+id/push_btn"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:background="@drawable/round_button"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/push_logo"
                    android:textSize="26sp"
                    android:textColor="@color/list_item_title" />
            </RelativeLayout>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/cloud_action_title"
                    android:textColor="@color/counter_text_bg"
                    android:textSize="20sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/cloud_action_subtitle"
                    android:textColor="@color/counter_text_bg"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/push_notification_title"
                    android:textColor="@color/counter_text_bg"
                    android:textSize="20sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/push_notification_subtitle"
                    android:textColor="@color/counter_text_bg"
                    android:textSize="12sp" />
            </LinearLayout>
            	
        </TableRow>
        
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="24dp" >
            
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <Button
                    android:id="@+id/example_btn"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:background="@drawable/round_button"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/example_logo"
                    android:textSize="26sp"
                    android:textColor="@color/list_item_title" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <Button
                    android:id="@+id/data_browser_btn"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:background="@drawable/round_button"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/data_browser_logo"
                    android:textSize="26sp"
                    android:textColor="@color/list_item_title" />
            </RelativeLayout>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/example_title"
                    android:textColor="@color/counter_text_bg"
                    android:textSize="20sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/example_subtitle"
                    android:textColor="@color/counter_text_bg"
                    android:textSize="12sp" />
            </LinearLayout>
            
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/data_browser_title"
                    android:textColor="@color/counter_text_bg"
                    android:textSize="20sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/data_browser_subtitle"
                    android:textColor="@color/counter_text_bg"
                    android:textSize="12sp" />
            </LinearLayout>

        </TableRow>
        
    </TableLayout>
</LinearLayout>